external/cimanim/cimanim.h

CIMGUI_API void   c_iam_tween_color_resolved(ImVec4* pOut, ImGuiID id, ImGuiID channel_id, iam_vec4_resolver, void* user, float dur, iam_ease_desc* ez, int policy, int color_space, float dt);
CIMGUI_API int    c_iam_tween_int_resolved(ImGuiID id, ImGuiID channel_id, iam_int_resolver, void* user, float dur, iam_ease_desc* ez, int policy, float dt);
// Color blending utility
CIMGUI_API void   c_iam_get_blended_color(ImVec4* pOut, ImVec4* a_srgb, ImVec4* b_srgb, float t, int color_space);
// ----------------------------------------------------
// Convenience shorthands for common easings
// ----------------------------------------------------

CIMGUI_API void   c_iam_ease_preset(iam_ease_desc* pOut, int type);
CIMGUI_API void   c_iam_ease_bezier(iam_ease_desc* pOut, float x1, float y1, float x2, float y2);
CIMGUI_API void   c_iam_ease_steps_desc(iam_ease_desc* pOut, int steps, int mode);
CIMGUI_API void   c_iam_ease_back(iam_ease_desc* pOut, float overshoot);
CIMGUI_API void   c_iam_ease_elastic(iam_ease_desc* pOut, float amplitude, float period);
CIMGUI_API void   c_iam_ease_spring_desc(iam_ease_desc* pOut, float mass, float stiffness, float damping, float v0);
CIMGUI_API void   c_iam_ease_custom_fn(iam_ease_desc* pOut, int slot);
// Scroll animation - smooth scrolling for ImGui windows
CIMGUI_API void   c_iam_scroll_to_y(float target_y, float duration, iam_ease_desc* ez);
CIMGUI_API void   c_iam_scroll_to_x(float target_x, float duration, iam_ease_desc* ez);
CIMGUI_API void   c_iam_scroll_to_top(float duration, iam_ease_desc* ez);
CIMGUI_API void   c_iam_scroll_to_bottom(float duration, iam_ease_desc* ez);
// ----------------------------------------------------
// Per-axis easing - different easing per component
// ----------------------------------------------------

// Tween with per-axis easing - each component uses its own easing curve
CIMGUI_API void   c_iam_tween_vec2_per_axis(ImVec2* pOut, ImGuiID id, ImGuiID channel_id, ImVec2* target, float dur, iam_ease_per_axis* ez, int policy, float dt);
CIMGUI_API void   c_iam_tween_vec4_per_axis(ImVec4* pOut, ImGuiID id, ImGuiID channel_id, ImVec4* target, float dur, iam_ease_per_axis* ez, int policy, float dt);
CIMGUI_API void   c_iam_tween_color_per_axis(ImVec4* pOut, ImGuiID id, ImGuiID channel_id, ImVec4* target_srgb, float dur, iam_ease_per_axis* ez, int policy, int color_space, float dt);
// ----------------------------------------------------
// Motion Paths - animate along curves and splines
// ----------------------------------------------------

// Single-curve evaluation functions (stateless, for direct use)
CIMGUI_API void   c_iam_bezier_quadratic(ImVec2* pOut, ImVec2* p0, ImVec2* p1, ImVec2* p2, float t);
CIMGUI_API void   c_iam_bezier_cubic(ImVec2* pOut, ImVec2* p0, ImVec2* p1, ImVec2* p2, ImVec2* p3, float t);
CIMGUI_API void   c_iam_catmull_rom(ImVec2* pOut, ImVec2* p0, ImVec2* p1, ImVec2* p2, ImVec2* p3, float t, float tension);
// Derivatives (for tangent/velocity)
CIMGUI_API void   c_iam_bezier_quadratic_deriv(ImVec2* pOut, ImVec2* p0, ImVec2* p1, ImVec2* p2, float t);
CIMGUI_API void   c_iam_bezier_cubic_deriv(ImVec2* pOut, ImVec2* p0, ImVec2* p1, ImVec2* p2, ImVec2* p3, float t);
CIMGUI_API void   c_iam_catmull_rom_deriv(ImVec2* pOut, ImVec2* p0, ImVec2* p1, ImVec2* p2, ImVec2* p3, float t, float tension);
// Query path info
CIMGUI_API bool   c_iam_path_exists(ImGuiID path_id);
CIMGUI_API float  c_iam_path_length(ImGuiID path_id);
CIMGUI_API void   c_iam_path_evaluate(ImVec2* pOut, ImGuiID path_id, float t);
CIMGUI_API void   c_iam_path_tangent(ImVec2* pOut, ImGuiID path_id, float t);
CIMGUI_API float  c_iam_path_angle(ImGuiID path_id, float t);
// Tween along a path
CIMGUI_API void   c_iam_tween_path(ImVec2* pOut, ImGuiID id, ImGuiID channel_id, ImGuiID path_id, float dur, iam_ease_desc* ez, int policy, float dt);
CIMGUI_API float  c_iam_tween_path_angle(ImGuiID id, ImGuiID channel_id, ImGuiID path_id, float dur, iam_ease_desc* ez, int policy, float dt);
// ----------------------------------------------------
// Arc-length parameterization (for constant-speed animation)
// ----------------------------------------------------

// Build arc-length lookup table for a path (call once per path, improves accuracy)
CIMGUI_API void   c_iam_path_build_arc_lut(ImGuiID path_id, int subdivisions);
CIMGUI_API bool   c_iam_path_has_arc_lut(ImGuiID path_id);
// Distance-based path evaluation (uses arc-length LUT for constant speed)
CIMGUI_API float  c_iam_path_distance_to_t(ImGuiID path_id, float distance);
CIMGUI_API void   c_iam_path_evaluate_at_distance(ImVec2* pOut, ImGuiID path_id, float distance);
CIMGUI_API float  c_iam_path_angle_at_distance(ImGuiID path_id, float distance);
CIMGUI_API void   c_iam_path_tangent_at_distance(ImVec2* pOut, ImGuiID path_id, float distance);
// ----------------------------------------------------
// Path Morphing - interpolate between two paths
// ----------------------------------------------------

// Evaluate morphed path at parameter t [0,1] with blend factor [0,1]
// path_a at blend=0, path_b at blend=1
// Paths can have different numbers of segments - they are resampled to match
CIMGUI_API void   c_iam_path_morph(ImVec2* pOut, ImGuiID path_a, ImGuiID path_b, float t, float blend, iam_morph_opts* opts);
// Get tangent of morphed path
CIMGUI_API void   c_iam_path_morph_tangent(ImVec2* pOut, ImGuiID path_a, ImGuiID path_b, float t, float blend, iam_morph_opts* opts);
// Get angle (radians) of morphed path
CIMGUI_API float  c_iam_path_morph_angle(ImGuiID path_a, ImGuiID path_b, float t, float blend, iam_morph_opts* opts);
// Tween along a morphing path - animates both position along path AND the morph blend
CIMGUI_API void   c_iam_tween_path_morph(ImVec2* pOut, ImGuiID id, ImGuiID channel_id, ImGuiID path_a, ImGuiID path_b, float target_blend, float dur, iam_ease_desc* path_ease, iam_ease_desc* morph_ease, int policy, float dt, iam_morph_opts* opts);
// Get current morph blend value from a tween (for querying state)
CIMGUI_API float  c_iam_get_morph_blend(ImGuiID id, ImGuiID channel_id);
// ----------------------------------------------------
// Text along motion paths
// ----------------------------------------------------

// Render text along a path (static - no animation)
CIMGUI_API void   c_iam_text_path(ImGuiID path_id, const char* text, iam_text_path_opts* opts);
// Animated text along path (characters appear progressively)
CIMGUI_API void   c_iam_text_path_animated(ImGuiID path_id, const char* text, float progress, iam_text_path_opts* opts);
// Helper: Get text width for path layout calculations
CIMGUI_API float  c_iam_text_path_width(const char* text, iam_text_path_opts* opts);
// ----------------------------------------------------
// Quad transform helpers (for advanced custom rendering)
// ----------------------------------------------------

// Transform a quad (4 vertices) by rotation and translation
CIMGUI_API void   c_iam_transform_quad(ImVec2* quad, ImVec2* center, float angle_rad, ImVec2* translation);
// Create a rotated quad for a glyph at a position on the path
CIMGUI_API void   c_iam_make_glyph_quad(ImVec2* quad, ImVec2* pos, float angle_rad, float glyph_width, float glyph_height, float baseline_offset);
// ----------------------------------------------------
// Text Stagger - per-character animation effects
// ----------------------------------------------------

// Render text with per-character stagger animation
CIMGUI_API void   c_iam_text_stagger(ImGuiID id, const char* text, float progress, iam_text_stagger_opts* opts);
// Get text width for layout calculations
CIMGUI_API float  c_iam_text_stagger_width(const char* text, iam_text_stagger_opts* opts);
// Get total animation duration for text (accounts for stagger delays)
CIMGUI_API float  c_iam_text_stagger_duration(const char* text, iam_text_stagger_opts* opts);