imgui/Dalamud.Bindings.ImAnim/ImAnimNative.cs


    [LibraryImport(LibName, EntryPoint = "c_iam_tween_color_resolved")]
    public static partial void TweenColorResolved(Vector4* pOut, uint id, uint channelId, delegate* unmanaged[Cdecl]<void*, Vector4> fn, void* userData, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, ImAnimColorSpace colorSpace, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_int_resolved")]
    public static partial int TweenIntResolved(uint id, uint channelId, delegate* unmanaged[Cdecl]<void*, int> fn, void* userData, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, float dt);

    // Color blending utility

    [LibraryImport(LibName, EntryPoint = "c_iam_get_blended_color")]
    public static partial void GetBlendedColor(Vector4* pOut, Vector4* a, Vector4* b, float t, ImAnimColorSpace colorSpace);


    // ----------------------------------------------------
    // Convenience shorthands for common easings
    // ----------------------------------------------------

    [LibraryImport(LibName, EntryPoint = "c_iam_ease_preset")]
    public static partial void EasePreset(ImAnimEaseDesc* pOut, ImAnimEaseType type);

    [LibraryImport(LibName, EntryPoint = "c_iam_ease_bezier")]
    public static partial void EaseBezier(ImAnimEaseDesc* pOut, float x1, float y1, float x2, float y2);

    [LibraryImport(LibName, EntryPoint = "c_iam_ease_steps_desc")]
    public static partial void EaseStepsDesc(ImAnimEaseDesc* pOut, int steps, ImAnimEaseStepsMode mode);

    [LibraryImport(LibName, EntryPoint = "c_iam_ease_back")]
    public static partial void EaseBack(ImAnimEaseDesc* pOut, float overshoot);

    [LibraryImport(LibName, EntryPoint = "c_iam_ease_elastic")]
    public static partial void EaseElastic(ImAnimEaseDesc* pOut, float amplitude, float period);

    [LibraryImport(LibName, EntryPoint = "c_iam_ease_spring_desc")]
    public static partial void EaseSpring(ImAnimEaseDesc* pOut, float mass, float stiffness, float damping, float v0);

    [LibraryImport(LibName, EntryPoint = "c_iam_ease_custom_fn")]
    public static partial void EaseCustomFn(ImAnimEaseDesc* pOut, int slot);

    // Scroll animation - smooth scrolling for ImGui windows

    [LibraryImport(LibName, EntryPoint = "c_iam_scroll_to_y")]
    public static partial void ScrollToY(float targetY, float duration, ImAnimEaseDesc* ez = null);

    [LibraryImport(LibName, EntryPoint = "c_iam_scroll_to_x")]
    public static partial void ScrollToX(float targetX, float duration, ImAnimEaseDesc* ez = null);

    [LibraryImport(LibName, EntryPoint = "c_iam_scroll_to_top")]
    public static partial void ScrollToTop(float duration = 0.3f, ImAnimEaseDesc* ez = null);

    [LibraryImport(LibName, EntryPoint = "c_iam_scroll_to_bottom")]
    public static partial void ScrollToBottom(float duration = 0.3f, ImAnimEaseDesc* ez = null);


    // ----------------------------------------------------
    // Per-axis easing - different easing per component
    // ----------------------------------------------------

    // Tween with per-axis easing - each component uses its own easing curve

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_vec2_per_axis")]
    public static partial void TweenVec2PerAxis(Vector2* pOut, uint id, uint channelId, Vector2* target, float dur, ImAnimEasePerAxis* ez, ImAnimPolicy policy, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_vec4_per_axis")]
    public static partial void TweenVec4PerAxis(Vector4* pOut, uint id, uint channelId, Vector4* target, float dur, ImAnimEasePerAxis* ez, ImAnimPolicy policy, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_color_per_axis")]
    public static partial void TweenColorPerAxis(Vector4* pOut, uint id, uint channelId, Vector4* targetSrgb, float dur, ImAnimEasePerAxis* ez, ImAnimPolicy policy, ImAnimColorSpace colorSpace, float dt);


    // ----------------------------------------------------
    // Motion Paths - animate along curves and splines
    // ----------------------------------------------------

    // Single-curve evaluation functions (stateless, for direct use)

    [LibraryImport(LibName, EntryPoint = "c_iam_bezier_quadratic")]
    public static partial void BezierQuadratic(Vector2* pOut, Vector2* p0, Vector2* p1, Vector2* p2, float t);

    [LibraryImport(LibName, EntryPoint = "c_iam_bezier_cubic")]
    public static partial void BezierCubic(Vector2* pOut, Vector2* p0, Vector2* p1, Vector2* p2, Vector2* p3, float t);

    [LibraryImport(LibName, EntryPoint = "c_iam_catmull_rom")]
    public static partial void CatmullRom(Vector2* pOut, Vector2* p0, Vector2* p1, Vector2* p2, Vector2* p3, float t, float tension);

    // Derivatives (for tangent/velocity)

    [LibraryImport(LibName, EntryPoint = "c_iam_bezier_quadratic_deriv")]
    public static partial void BezierQuadraticDeriv(Vector2* pOut, Vector2* p0, Vector2* p1, Vector2* p2, float t);

    [LibraryImport(LibName, EntryPoint = "c_iam_bezier_cubic_deriv")]
    public static partial void BezierCubicDeriv(Vector2* pOut, Vector2* p0, Vector2* p1, Vector2* p2, Vector2* p3, float t);

    [LibraryImport(LibName, EntryPoint = "c_iam_catmull_rom_deriv")]
    public static partial void CatmullRomDeriv(Vector2* pOut, Vector2* p0, Vector2* p1, Vector2* p2, Vector2* p3, float t, float tension);

    // Query path info

    [LibraryImport(LibName, EntryPoint = "c_iam_path_exists")]
    public static partial byte PathExists(uint pathId);

    [LibraryImport(LibName, EntryPoint = "c_iam_path_length")]
    public static partial float PathLength(uint pathId);

    [LibraryImport(LibName, EntryPoint = "c_iam_path_evaluate")]
    public static partial void PathEvaluate(Vector2* pOut, uint pathId, float t);

    [LibraryImport(LibName, EntryPoint = "c_iam_path_tangent")]
    public static partial void PathTangent(Vector2* pOut, uint pathId, float t);

    [LibraryImport(LibName, EntryPoint = "c_iam_path_angle")]
    public static partial float PathAngle(uint pathId, float t);

    // Tween along a path

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_path")]
    public static partial void TweenPath(Vector2* pOut, uint id, uint channelId, uint pathId, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, float dt = -1f);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_path_angle")]
    public static partial float TweenPathAngle(uint id, uint channelId, uint pathId, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, float dt = -1f);


    // ----------------------------------------------------
    // Arc-length parameterization (for constant-speed animation)
    // ----------------------------------------------------

    // Build arc-length lookup table for a path (call once per path, improves accuracy)

    [LibraryImport(LibName, EntryPoint = "c_iam_path_build_arc_lut")]
    public static partial void PathBuildArcLut(uint pathId, int subdivisions);

    [LibraryImport(LibName, EntryPoint = "c_iam_path_has_arc_lut")]
    public static partial byte PathHasArcLut(uint pathId);

    // Distance-based path evaluation (uses arc-length LUT for constant speed)

    [LibraryImport(LibName, EntryPoint = "c_iam_path_distance_to_t")]
    public static partial float PathDistanceToT(uint pathId, float distance);

    [LibraryImport(LibName, EntryPoint = "c_iam_path_evaluate_at_distance")]
    public static partial void PathEvaluateAtDistance(Vector2* pOut, uint pathId, float distance);

    [LibraryImport(LibName, EntryPoint = "c_iam_path_angle_at_distance")]
    public static partial float PathAngleAtDistance(uint pathId, float distance);

    [LibraryImport(LibName, EntryPoint = "c_iam_path_tangent_at_distance")]
    public static partial void PathTangentAtDistance(Vector2* pOut, uint pathId, float distance);


    // ----------------------------------------------------
    // Path Morphing - interpolate between two paths
    // ----------------------------------------------------

    // Evaluate morphed path at parameter t [0,1] with blend factor [0,1]
    // path_a at blend=0, path_b at blend=1
    // Paths can have different numbers of segments - they are resampled to match
    [LibraryImport(LibName, EntryPoint = "c_iam_path_morph")]
    public static partial void PathMorph(Vector2* pOut, uint pathA, uint pathB, float t, float blend, ImAnimMorphOpts* opts = null);

    // Get tangent of morphed path
    [LibraryImport(LibName, EntryPoint = "c_iam_path_morph_tangent")]
    public static partial void PathMorphTangent(Vector2* pOut, uint pathA, uint pathB, float t, float blend, ImAnimMorphOpts* opts = null);

    // Get angle (radians) of morphed path
    [LibraryImport(LibName, EntryPoint = "c_iam_path_morph_angle")]
    public static partial float PathMorphAngle(uint pathA, uint pathB, float t, float blend, ImAnimMorphOpts* opts = null);

    // Tween along a morphing path - animates both position along path AND the morph blend
    [LibraryImport(LibName, EntryPoint = "c_iam_tween_path_morph")]
    public static partial void TweenPathMorph(Vector2* pOut, uint id, uint channelId, uint pathA, uint pathB, float targetBlend, float dur, ImAnimEaseDesc* pathEase, ImAnimEaseDesc* morphEase, ImAnimPolicy policy, float dt, ImAnimMorphOpts* opts = null);

    // Get current morph blend value from a tween (for querying state)
    [LibraryImport(LibName, EntryPoint = "c_iam_get_morph_blend")]
    public static partial float GetMorphBlend(uint id, uint channelId);


    // ----------------------------------------------------
    // Text along motion paths
    // ----------------------------------------------------

    // Render text along a path (static - no animation)
    [LibraryImport(LibName, EntryPoint = "c_iam_text_path")]
    public static partial void TextPath(uint pathId, byte* text, ImAnimTextPathOpts* opts = null);

    // Animated text along path (characters appear progressively)
    [LibraryImport(LibName, EntryPoint = "c_iam_text_path_animated")]
    public static partial void TextPathAnimated(uint pathId, byte* text, float progress, ImAnimTextPathOpts* opts = null);

    // Helper: Get text width for path layout calculations
    [LibraryImport(LibName, EntryPoint = "c_iam_text_path_width")]
    public static partial float TextPathWidth(byte* text, ImAnimTextPathOpts* opts = null);


    // ----------------------------------------------------
    // Quad transform helpers (for advanced custom rendering)
    // ----------------------------------------------------

    // Transform a quad (4 vertices) by rotation and translation
    [LibraryImport(LibName, EntryPoint = "c_iam_transform_quad")]
    public static partial void TransformQuad(Quaternion* quad, Vector2* center, float angleRad, Vector2* translation);

    // Create a rotated quad for a glyph at a position on the path
    [LibraryImport(LibName, EntryPoint = "c_iam_make_glyph_quad")]
    public static partial void MakeGlyphQuad(Quaternion* quad, Vector2* pos, float angleRad, float glyphWidth, float glyphHeight, float baselineOffset);


    // ----------------------------------------------------
    // Text Stagger - per-character animation effects
    // ----------------------------------------------------

    // Render text with per-character stagger animation
    [LibraryImport(LibName, EntryPoint = "c_iam_text_stagger")]
    public static partial void TextStagger(uint id, byte* text, float progress, ImAnimTextStaggerOpts* opts = null);

    // Get text width for layout calculations
    [LibraryImport(LibName, EntryPoint = "c_iam_text_stagger_width")]
    public static partial float TextStaggerWidth(byte* text, ImAnimTextStaggerOpts* opts = null);

    // Get total animation duration for text (accounts for stagger delays)
    [LibraryImport(LibName, EntryPoint = "c_iam_text_stagger_duration")]
    public static partial float TextStaggerDuration(byte* text, ImAnimTextStaggerOpts* opts = null);

